--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
       "@middlewares/*": ["middlewares/*"],
       "@utils/*": ["utils/*"]
     },
-    "esModuleInterop": true /* Skip type checking all .d.ts files. */
+    "esModuleInterop": true /* Skip type checking all .d.ts files. */,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "exclude": ["node_modules", "jest.config.ts"]
 }
