--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.1",
     "@types/pg": "^8.11.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "inversify": "^6.2.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
