--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,16 @@ services:
       - /app/node_modules
 
   db:
-    image: postgres:14
+    image: mysql:8.3.0
     restart: always
+    env_file: .env
     environment:
-      POSTGRES_USER:
-      POSTGRES_PASSWORD:
-      POSTGRES_DB:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS} # Solo esta variable es necesaria para el root
+      MYSQL_DATABASE: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "3306:3306"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
 
 volumes:
-  postgres_data:
+  mysql_data:
