--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
   "repository": "https://github.com/exroot/api-medica.git",
   "author": "Elias <exroot.dev@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "dev": "ts-node -r tsconfig-paths/register src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^22.13.1",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.13.4",
     "@types/pg": "^8.11.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
@@ -25,8 +35,11 @@
     "inversify": "^6.2.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.12.0",
     "reflect-metadata": "^0.2.2",
+    "stripe": "^17.6.0",
+    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.20"
   }
 }
