--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "test": "jest",
     "dev": "ts-node -r tsconfig-paths/register src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "build": "tsc --traceResolution",
+    "start": "node -r tsconfig-paths/register dist/server.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -25,6 +25,12 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "_moduleAliases": {
+    "@config": "dist/config",
+    "@modules": "dist/modules",
+    "@middlewares": "dist/middlewares",
+    "@utils": "dist/utils"
   },
   "dependencies": {
     "bcryptjs": "^3.0.0",
